# AgentWire

./: .gitignore  AgentWire-Design.MD  README.md  demo_run.py  mkdocs.yml  pyproject.toml  requirements-dev.txt
agentwire/: __init__.py  bus.py  cli.py  emitter.py  models.py  pricing.py  session.py  store.py  wrapper.py
agentwire/integrations/: __init__.py  autogen.py  crewai.py  langchain.py
agentwire/static/: index.html
agentwire/static/assets/: index-BGwZx1Ld.css  index-D6LZoxlX.css  index-Dchactyk.js
archive/phase-summaries/: 01-SDK-Implementation.md  02-WebSocket-Broadcaster.md  03-React-Dashboard.md  04-Graph-View.md  05-Session-Replay.md  06-CLI-Integrations.md  07-Examples-Documentation.md
archive/test-scripts/: test_phase1_models_store_api.py  test_phase2_sdk.py  test_phase3_websocket.py  test_phase4_dashboard.bat  test_phase4_dashboard.sh
dashboard/: README.md  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css  types.ts
dashboard/src/components/: GraphView.tsx  MessageFeed.tsx  ReplayBar.tsx  Sidebar.tsx  StatsBar.tsx
dashboard/src/hooks/: useWebSocket.ts
docs/: api-reference.md  index.md  quickstart.md
examples/: __init__.py  simple_pipeline.py
examples/autogen_coding_team/: README.md  main.py
examples/langchain_research/: README.md  main.py
examples/raw_api_pipeline/: README.md  main.py
tests/: __init__.py  test_bus.py  test_emitter.py  test_graph.py  test_integrations.py  test_models.py  test_session.py  test_websocket.py  test_wrapper.py
