[project]
name = "agentwire-mcp"
version = "0.1.0"
description = "Real-time message bus and inspector for multi-agent LLM systems"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "DanixMP", email = "danixmp@gmail.com" }
]
keywords = ["llm", "agents", "multi-agent", "observability", "monitoring", "langchain", "autogen", "crewai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "aiosqlite>=0.19",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/DanixMP/AgentWire"
Documentation = "https://github.com/DanixMP/AgentWire/tree/main/docs"
Repository = "https://github.com/DanixMP/AgentWire"
Issues = "https://github.com/DanixMP/AgentWire/issues"

[project.optional-dependencies]
postgres = ["asyncpg>=0.29"]
langchain = ["langchain>=0.2"]
autogen = ["pyautogen>=0.2"]
crewai = ["crewai>=0.28"]
all = ["agentwire[postgres,langchain,autogen,crewai]"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[project.scripts]
agentwire = "agentwire.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


[tool.hatch.build.targets.wheel]
packages = ["agentwire"]
